RESOLVED FIXED272713
[view-transitions] https://simple-set-demos.glitch.me/gross-cube-transition doesn't render 3d effects
https://bugs.webkit.org/show_bug.cgi?id=272713
Summary [view-transitions] https://simple-set-demos.glitch.me/gross-cube-transition d...
Matt Woodrow
Reported 2024-04-15 16:24:10 PDT
Looks like 'transform-style: preserve-3d' isn't being respected on the pseudo elements.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-15 16:24:20 PDT
Matt Woodrow
Comment 2 2024-04-15 16:28:01 PDT
EWS
Comment 3 2024-04-17 15:38:05 PDT
Committed 277639@main (84c369e893d8): <https://commits.webkit.org/277639@main> Reviewed commits have been landed. Closing PR #27293 and removing active labels.
Matt Woodrow
Comment 4 2024-04-17 19:44:15 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/45778
Note You need to log in before you can comment on or make changes to this bug.