[view-transitions] https://simple-set-demos.glitch.me/gross-cube-transition doesn't render 3d effects. https://bugs.webkit.org/show_bug.cgi?id=272713 <rdar://126513916>

Reviewed by Tim Nguyen.

ancestorLayerIsDOMParent (used for determing if 'transform-style: preserve-3d'
from the parent should be applied) was only taking into account 'Element' ancestors.
Add support for also checking for pseudo-element parents in the view-transition
tree.

* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/pseudo-element-preserve-3d-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/pseudo-element-preserve-3d-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/pseudo-element-preserve-3d.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::ancestorLayerIsDOMParent const):
(WebCore::RenderLayer::participatesInPreserve3D const):
(WebCore::parentLayerIsDOMParent): Deleted.
* Source/WebCore/rendering/RenderLayer.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateTransformFlatteningLayer):
(WebCore::ancestorLayerIsDOMParent): Deleted.
* Source/WebCore/rendering/style/RenderStyleConstants.h:
(WebCore::parentPseudoElement):
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::makeResolutionContextForPseudoElement):

Canonical link: https://commits.webkit.org/277639@main